--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-01-10T03:43:14.499Z\n"
-"PO-Revision-Date: 2025-01-10T03:43:14.499Z\n"
+"POT-Creation-Date: 2025-01-10T15:42:39.312Z\n"
+"PO-Revision-Date: 2025-01-10T15:42:39.312Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -29,6 +29,16 @@ msgstr "Approval saved"
 
 msgid "Approve"
 msgstr "Approve"
+
+msgid "Approving {{count}} data sets"
+msgid_plural "Approving {{count}} data sets"
+msgstr[0] "Approving {{count}} data sets"
+msgstr[1] "Approving {{count}} data sets"
+
+msgid "Approving {{count}} data set"
+msgid_plural "Approving {{count}} data set"
+msgstr[0] "Approving {{count}} data set"
+msgstr[1] "Approving {{count}} data set"
 
 msgid "Are you sure you want to approve this data?"
 msgstr "Are you sure you want to approve this data?"
@@ -89,10 +99,10 @@ msgstr "Retry loading data set"
 
 msgid ""
 "This data set doesn't have any data for {{- period}} in {{- orgUnit}} and "
-"{{- categoryOptionCombo}}."
+"{{- attributeOptionCombo}}."
 msgstr ""
 "This data set doesn't have any data for {{- period}} in {{- orgUnit}} and "
-"{{- categoryOptionCombo}}."
+"{{- attributeOptionCombo}}."
 
 msgid "Data Element"
 msgstr "Data Element"
