Fixed bug when the selected workflow does not have any data set

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-01-15T03:06:00.063Z\n"
-"PO-Revision-Date: 2025-01-15T03:06:00.063Z\n"
+"POT-Creation-Date: 2025-01-15T07:27:43.948Z\n"
+"PO-Revision-Date: 2025-01-15T07:27:43.948Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -317,6 +317,20 @@ msgstr "No workflows found. None may exist, or you may not have access to any."
 
 msgid "Could not load approval data"
 msgstr "Could not load approval data"
+
+msgid ""
+"The selected workflow \"{{workflowName}}\" does not have any associated "
+"data sets."
+msgstr ""
+"The selected workflow \"{{workflowName}}\" does not have any associated "
+"data sets."
+
+msgid ""
+"Please verify the workflow configuration or select a different workflow "
+"that includes data sets."
+msgstr ""
+"Please verify the workflow configuration or select a different workflow "
+"that includes data sets."
 
 msgid "Retry loading approval data"
 msgstr "Retry loading approval data"
