--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-01-15T07:27:43.948Z\n"
-"PO-Revision-Date: 2025-01-15T07:27:43.948Z\n"
+"POT-Creation-Date: 2025-01-15T11:22:43.795Z\n"
+"PO-Revision-Date: 2025-01-15T11:22:43.796Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -97,18 +97,8 @@ msgstr ""
 msgid "Retry loading data set"
 msgstr "Retry loading data set"
 
-msgid ""
-"This data set doesn't have any data for {{- period}} in {{- orgUnit}} and "
-"{{- attributeOptionCombo}}."
-msgstr ""
-"This data set doesn't have any data for {{- period}} in {{- orgUnit}} and "
-"{{- attributeOptionCombo}}."
-
-msgid "Data Element"
-msgstr "Data Element"
-
-msgid "Value"
-msgstr "Value"
+msgid "This data set doesn't have any data for {{- period}} in {{- orgUnit}}."
+msgstr "This data set doesn't have any data for {{- period}} in {{- orgUnit}}."
 
 msgid "1 data set"
 msgstr "1 data set"
