--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-01-22T12:15:50.775Z\n"
-"PO-Revision-Date: 2025-01-22T12:15:50.775Z\n"
+"POT-Creation-Date: 2025-01-23T02:38:21.489Z\n"
+"PO-Revision-Date: 2025-01-23T02:38:21.489Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -69,12 +69,12 @@ msgid "Unapprove"
 msgstr "Unapprove"
 
 msgid ""
-"This workflow {{ workflowName }}, the organisation unit {{ orgunitName }} "
-"and the attribute option combo {{ attrOptionComboName }} does not contain "
+"Workflow \"{{ workflowName }}\", organisation unit \"{{ orgunitName }}\" "
+"and attribute option combo \"{{ attrOptionComboName }}\" does not contain "
 "any data sets."
 msgstr ""
-"This workflow {{ workflowName }}, the organisation unit {{ orgunitName }} "
-"and the attribute option combo {{ attrOptionComboName }} does not contain "
+"Workflow \"{{ workflowName }}\", organisation unit \"{{ orgunitName }}\" "
+"and attribute option combo \"{{ attrOptionComboName }}\" does not contain "
 "any data sets."
 
 msgid "Choose a data set to review"
