Add search field for Orgunti and Workflow dropdown

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-01-24T14:25:09.285Z\n"
-"PO-Revision-Date: 2025-01-24T14:25:09.285Z\n"
+"POT-Creation-Date: 2025-02-12T15:11:07.352Z\n"
+"PO-Revision-Date: 2025-02-12T15:11:07.352Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -86,6 +86,23 @@ msgid ""
 msgstr ""
 "{{- workflowName}} has multiple data sets. Choose a data set from the tabs "
 "above."
+
+msgid "Could not load approval data"
+msgstr "Could not load approval data"
+
+msgid ""
+"The selected workflow \"{{workflowName}}\" does not have any associated "
+"data sets."
+msgstr ""
+"The selected workflow \"{{workflowName}}\" does not have any associated "
+"data sets."
+
+msgid ""
+"Please verify the workflow configuration or select a different workflow "
+"that includes data sets."
+msgstr ""
+"Please verify the workflow configuration or select a different workflow "
+"that includes data sets."
 
 msgid "Loading data set"
 msgstr "Loading data set"
@@ -275,6 +292,9 @@ msgstr ""
 msgid "Search for {{categoryName}}"
 msgstr "Search for {{categoryName}}"
 
+msgid "No results found for  {{searchQuery}}"
+msgstr "No results found for  {{searchQuery}}"
+
 msgid "Clear selections"
 msgstr "Clear selections"
 
@@ -296,6 +316,9 @@ msgstr "Organisation Unit"
 msgid "Choose an organisation unit"
 msgstr "Choose an organisation unit"
 
+msgid "Search by name"
+msgstr "Search by name"
+
 msgid "Period"
 msgstr "Period"
 
@@ -314,22 +337,8 @@ msgstr "Choose a workflow"
 msgid "No workflows found. None may exist, or you may not have access to any."
 msgstr "No workflows found. None may exist, or you may not have access to any."
 
-msgid "Could not load approval data"
-msgstr "Could not load approval data"
-
-msgid ""
-"The selected workflow \"{{workflowName}}\" does not have any associated "
-"data sets."
-msgstr ""
-"The selected workflow \"{{workflowName}}\" does not have any associated "
-"data sets."
-
-msgid ""
-"Please verify the workflow configuration or select a different workflow "
-"that includes data sets."
-msgstr ""
-"Please verify the workflow configuration or select a different workflow "
-"that includes data sets."
+msgid "Search"
+msgstr "Search"
 
 msgid "Retry loading approval data"
 msgstr "Retry loading approval data"
